2022-08-06 - Fix alignment of the images

--- a/2022/08/06/main.css
+++ b/2022/08/06/main.css
@@ -64,7 +64,6 @@ a:hover {
 }
 
 .pantheon-video {
-	background-color: yellow;
 	border-style: none;
 	width: 560px;
 	height: 315px;
@@ -76,12 +75,12 @@ a:hover {
 	gap: 2rem;
 	flex-wrap: wrap;
 	align-items: center;
+	justify-content: center;
 }
 
 .images img {
 	max-width: 28rem;
 	max-height: 25rem;
-	justify-content: space-evenly;
 }
 
 .images a:hover div {
